Fixes bug where pikachu picture appears too large in relation to text on larger computer screens

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -134,7 +134,7 @@ a.noColor {
 
 #pikachuImg {
   width: 25%;
-  max-width: 800px;
+  max-width: 400px;
   height: 25%;
   opacity: 0.5;
   float: right;
